--- a/ng-polwro/src/styles.scss
+++ b/ng-polwro/src/styles.scss
@@ -1,1 +1,43 @@
-/* You can add global styles to this file, and also import other style files */
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$ng-polwro-primary: mat.m2-define-palette(mat.$m2-orange-palette, 500);
+$ng-polwro-accent: mat.m2-define-palette(mat.$m2-amber-palette, A200, A100, A400);
+$ng-polwro-warn: mat.m2-define-palette(mat.$m2-red-palette);
+
+// Create the theme object (a Sass map containing all of the palettes).
+$ng-polwro-theme: mat.m2-define-dark-theme((
+  color: (
+    primary: $ng-polwro-primary,
+    accent: $ng-polwro-accent,
+    warn: $ng-polwro-warn
+  ),
+  typography: mat.m2-define-typography-config(),
+  density: 0
+));
+
+// Include theme styles for core and each component used in your app.
+@include mat.all-component-themes($ng-polwro-theme);
+
+/* Global styles */
+html, body { 
+  height: 100%; 
+  margin: 0;
+  background-color: #000000;
+}
+
+body { 
+  margin: 0; 
+  font-family: Roboto, "Helvetica Neue", sans-serif; 
+  color: white;
+}
